# ywallet

./: README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build-mac.yml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: accounts.dart  accounts.g.dart  appsettings.dart  init.dart  main.dart  main.reflectable.dart  router.dart  store.dart  store.freezed.dart  store.g.dart  tablelist.dart  types.dart  utils.dart  widgets.dart
lib/coin/: coin.dart
lib/pages/: about.dart  scan.dart  splash.dart  welcome.dart
lib/pages/accounts/: new_import.dart
lib/pages/main/: balance.dart  (+3 more)
lib/src/: version.dart
lib/vote/: delegate.dart  history.dart  new.dart  overview.dart  select.dart  vote.dart  vote_data.dart  vote_data.g.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
misc/: codesign-notarize.sh
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  types.rs
rust/src/api/: mod.rs  simple.rs  warp.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_zwallet.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_zwallet.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+13 files in other folders)
