[package]
name = "rust_lib_zwallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
anyhow = "1.0.95"
tracing = "0.1.41"
hex = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled", "modern_sqlite", "backup"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
lazy_static = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.34.0"
rand_core = "0.6.4"
orchard = "0.3.0"

zcash-vote = { git = "https://github.com/hhanh00/zcash-vote", rev = "2ec97ea" }
zcash-warpsync = { git = "https://github.com/hhanh00/zcash-sync", rev = "be50e69" }
#zcash-warpsync = { path = "../../ywallet/native/zcash-sync" }

[features]
dart_ffi = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.dev]
opt-level = 3
debug = true

[patch.crates-io]
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="dff7dee"}

[patch."https://github.com/hhanh00/librustzcash.git"]
zcash_note_encryption = "0.2"
